--- a/storefront/package.json
+++ b/storefront/package.json
@@ -11,24 +11,24 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "@types/react-native-vector-icons": "^6.4.13",
     "axios": "^1.3.4",
-    "expo": "^48.0.7",
+    "expo": "^48.0.0",
     "expo-font": "~11.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-dotenv": "^3.4.8",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "2.14.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
-    "@types/react": "~18.0.24",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.70.6",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "expo start",
