--- a/storefront/package.json
+++ b/storefront/package.json
@@ -12,7 +12,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "@types/react-native-vector-icons": "^6.4.13",
     "axios": "^1.3.4",
-    "expo": "^48.0.0",
+    "expo": "~48.0.10",
     "expo-font": "~11.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,20 +22,24 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.11",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.70.6",
+    "@types/react-native-dotenv": "^0.2.0",
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "start:clean": "expo r -c"
   },
   "version": "1.0.0",
   "private": true,
