--- a/storefront/tsconfig.json
+++ b/storefront/tsconfig.json
@@ -1,4 +1,5 @@
 {
-  "compilerOptions": { "strict": true},
-  "extends": "expo/tsconfig.base"
+  "compilerOptions": { "strict": true, "typeRoots": ["./src/types"]},
+  "extends": "expo/tsconfig.base",
+  
 }
