--- a/backend-dummie/package.json
+++ b/backend-dummie/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "build": "netlify deploy --prod"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +15,15 @@
     "cloudinary": "^1.24.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.9.2",
     "google-auth-library": "^6.1.6",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.11.15",
+    "netlify-cli": "^13.2.2",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.2.0",
     "uuid": "^8.3.2"
   }
 }
