--- a/storefront/package.json
+++ b/storefront/package.json
@@ -21,10 +21,11 @@
     "react-native": "0.71.6",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.70.6",
     "@types/react-native-dotenv": "^0.2.0",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.9.4"
   },
   "scripts": {
