--- a/storefront/.env
+++ b/storefront/.env
@@ -1,2 +1,2 @@
-API_URL_ANDROID=http://10.0.2.2:8084
-API_URL_IOS=http://localhost:8084
+API_URL_ANDROID=https://backend-74a0.onrender.com
+API_URL_IOS=https://backend-74a0.onrender.com
