--- a/storefront/app.json
+++ b/storefront/app.json
@@ -4,16 +4,16 @@
     "slug": "store-front",
     "version": "1.0.0",
     "sdkVersion": "48.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "ios": {
       "bundleIdentifier": "y"
     },
     "android": {
       "package": "com.anonymous.storefront"
+    },
+    "web": {
+      "bundler": "metro",
+      "favicon": "./src/assets/favicon.png"
     }
   }
 }
