--- a/storefront/package.json
+++ b/storefront/package.json
@@ -33,7 +33,7 @@
     "react-native-svg": "^13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.11",
-    "react-native-webview": "^12.0.2"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
