--- a/storefront/package.json
+++ b/storefront/package.json
@@ -23,10 +23,13 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "~2.14.4",
+    "react-native-recaptcha-that-works": "^1.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.4.0",
-    "react-native-web": "~0.18.11"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.11",
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
